# DistributedDecryptionSystem

./: .gitignore  README.md  README.txt
DDS/: CMakeLists.txt  DDS_bash_loop.sh  Doxyfile
DDS/cxx_elements/: CMakeLists.txt  main.cpp
DDS/cxx_elements/common/: CMakeLists.txt
DDS/cxx_elements/common/File/: FileCheck.cpp  FileExceptions.hpp  FileOperation.cpp  FilesCheck.cpp
DDS/cxx_elements/common/JsonFileOperations/: JsonFileOperations.cpp  JsonFileOperations.hpp
DDS/cxx_elements/common/Logger/: Logger.cpp  Logger.hpp
DDS/cxx_elements/common/Message/: MPIMessage.hpp  SysCom.hpp
DDS/cxx_elements/common/Message/MPI/: GatewayBase.cpp
DDS/cxx_elements/common/Message/Syscom/: SyscomMessage.hpp
DDS/cxx_elements/common/MessageGateway/: Gateway.cpp  Gateway.hpp  GatewayBase.hpp  GatewayExceptions.hpp
DDS/cxx_elements/common/Ping/: ipv4_header.hpp  ping.cpp
DDS/cxx_elements/common/RunOptions/: RunOptions.cpp  RunOptions.hpp  RunOptionsExceptions.hpp
DDS/cxx_elements/core_application/: CMakeLists.txt  main.cpp  main_backup.cpp
DDS/cxx_elements/core_application/MasterNode/: CMakeLists.txt
DDS/cxx_elements/core_application/MasterNode/MainClass/: MasterMainClass.cpp  MasterMainClass.hpp
DDS/cxx_elements/core_application/MasterNode/Master/: Master.cpp  Master.hpp  MasterExceptions.hpp  MasterGateway.cpp  MasterGateway.hpp  MasterMessageGateway.cpp  MasterMessageGateway.hpp  MasterMessageHelper.cpp  MasterMessageHelper.hpp
DDS/cxx_elements/core_application/MasterNode/Watchdog/: Watchdog.cpp  Watchdog.hpp
DDS/cxx_elements/core_application/SlaveNode/: CMakeLists.txt
DDS/cxx_elements/core_application/SlaveNode/MainClass/: SlaveMainClass.cpp  SlaveMainClass.hpp
DDS/cxx_elements/core_application/SlaveNode/Slave/: Slave.cpp  Slave.hpp  SlaveExceptions.hpp  SlaveGateway.cpp  SlaveGateway.hpp  SlaveMessageGateway.cpp  SlaveMessageGateway.hpp  SlaveMessageHelper.cpp  SlaveMessageHelper.hpp  SlaveSyscommGateway.cpp  SlaveSyscommGateway.hpp
DDS/cxx_elements/core_application/SlaveNode/Worker/: CMakeLists.txt
DDS/cxx_elements/core_application/SlaveNode/Worker/Decryptor/: Decryptor.cpp  Decryptor.hpp
DDS/cxx_elements/core_application/SlaveNode/Worker/WorkerBase/: WorkerBase.cpp  WorkerBase.hpp
DDS/cxx_elements/core_application/controller/: Controller.cpp
DDS/cxx_elements/core_application/model/: Model.hpp
DDS/cxx_elements/core_application/view/: View.cpp
DDS/cxx_elements/utilities/: utils.hpp
DDS/cxx_tests/: CMakeLists.txt
DDS/cxx_tests/test_implementation/: Master_test.cpp  Slave_test.cpp
DDS/cxx_tests/test_libs/: README.txt
DDS/cxx_tests/test_libs/googlemock/: CONTRIBUTORS
DDS/cxx_tests/test_libs/googlemock/docs/: CheatSheet.md  CookBook.md  DesignDoc.md  DevGuide.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
DDS/cxx_tests/test_libs/googlemock/docs/v1_5/: CheatSheet.md  CookBook.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
DDS/cxx_tests/test_libs/googlemock/docs/v1_6/: CheatSheet.md  CookBook.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
DDS/cxx_tests/test_libs/googlemock/docs/v1_7/: CheatSheet.md  CookBook.md  Documentation.md  ForDummies.md  FrequentlyAskedQuestions.md
DDS/cxx_tests/test_libs/googlemock/include/gmock/: gmock-generated-actions.h.pump  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h.pump  gmock-generated-nice-strict.h.pump
DDS/cxx_tests/test_libs/googlemock/scripts/: gmock-config.in
DDS/cxx_tests/test_libs/googlemock/test/: gmock_output_test_golden.txt
DDS/cxx_tests/test_libs/googletest/: CONTRIBUTORS  Makefile.am  README.md
DDS/cxx_tests/test_libs/googletest/codegear/: gtest.cbproj
DDS/cxx_tests/test_libs/googletest/docs/: AdvancedGuide.md  Documentation.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_Documentation.md  V1_5_FAQ.md  V1_5_Primer.md  V1_5_PumpManual.md  V1_5_XcodeGuide.md  V1_6_AdvancedGuide.md  V1_6_Documentation.md  V1_6_FAQ.md  V1_6_Primer.md  V1_6_PumpManual.md  V1_7_AdvancedGuide.md  V1_7_Documentation.md  V1_7_FAQ.md  V1_7_Primer.md
DDS/cxx_tests/test_libs/googletest/include/gtest/: gtest-param-test.h.pump
DDS/cxx_tests/test_libs/googletest/include/gtest/internal/: gtest-tuple.h.pump  gtest-type-util.h.pump
DDS/cxx_tests/test_libs/googletest/m4/: acx_pthread.m4
DDS/cxx_tests/test_libs/googletest/scripts/: gtest-config.in
DDS/cxx_tests/test_libs/googletest/xcode/gtest.xcodeproj/: project.pbxproj
DDS/cxx_tests/test_mocked_headres/: Master_mock.hpp  Slave_mock.hpp
DDS/cxx_tests/test_source/: CMakeLists.txt  SlaveMainClass_test.cpp  mvc_controller_tests.cpp  mvc_model_tests.cpp
DDS/cxx_tests/test_source/mocks_headres/: MasterMainClass_mock.hpp  SlaveMainClass_mock.hpp
DDS/cxx_tests/test_source/mocks_source/: ModelMock.hpp
DDS/cxx_tests/test_source/test_implementation/: MasterMainClass_test.cpp
DDS/mpi_playground/ping_pong/: ping_pong3.cpp  ping_pong4.cpp
SimpleCrypt/: CMakeLists.txt  main.cpp
SimpleCrypt/cmake_modules/cryptopp-cmake/: README.rst
SimpleCrypt/test_data/: 100K_random.txt  10K_random.txt  1M_random.txt  200K_random.txt  20K_random.txt  2K_random.txt  500K_random.txt  50K_random.txt  5K_random.txt
docs/: prezentacja_pl.pptx
master_node/: CMakeLists.txt  main.cpp
slave_node/: CMakeLists.txt  main.cpp
slave_node/cxx_elements/: CMakeLists.txt
slave_node/cxx_elements/core_application/: CMakeLists.txt
slave_node/cxx_elements/core_application/controller/: Controller.cpp  Controller.hpp
slave_node/cxx_elements/core_application/model/: Model.cpp  Model.hpp
slave_node/cxx_elements/core_application/view/: View.cpp  View.hpp
slave_node/cxx_tests/: CMakeLists.txt
slave_node/cxx_tests/test_source/: CMakeLists.txt  mvc_model_tests.cpp
slave_node/cxx_tests/test_source/mocks_source/: ModelMock.hpp
